working on the basic techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -166,8 +166,8 @@
           <p>Giant Riceball should still be prioritized because it increases max fullness by 7%.<br>It's common to end up with multiple riceballs over time when you have a Storage Pot,<br>so the idea is to prioritize eating riceballs with low fullness restoration to free up inventory space.</p>
           <h2 id="level_up_by_defeating_strong_enemies">Level Up by Defeating Strong Enemies</h2>
           <img src="/shiren2/image/other/level_up_monster.png" width="863" height="160" alt="level_up_monster.png" class="image_padding">
-          <p>Eating Happy Grass increases level by 1, but it can also be thrown at a monster to level them up.<br>You can utilize this to create a strong enemy, and then defeat them for a large amount of experience points,<br>with the end result of gaining multiple level ups as opposed to just one from eating the Happy Grass.</p>
-          <p>Happy Staff can also be used to level up an enemy monster.<br>Snacky can spawn on early floors in dungeons like <a href="/shiren2/html/dungeon/road-to-the-end.html">Road to the End</a>,<br>possibly resulting in a monster defeating it and leveling up.<br>Leveling up a Pit Mamel into a Cave Mamel early on is highly recommended.</p>
+          <p>Eating <a href="/shiren2/html/item/grass.html#happy_grass">Happy Grass</a> increases level by 1, but it can also be thrown at a monster to level them up.<br>You can utilize this to create a strong enemy, and then defeat them for a large amount of experience points,<br>with the end result of gaining multiple level ups as opposed to just one from eating the Happy Grass.</p>
+          <p><a href="/shiren2/html/item/staves.html#happy_staff">Happy Staff</a> can also be used to level up an enemy monster.<br><a href="/shiren2/html/system/monsters.html#snacky">Snacky</a> can spawn on early floors in dungeons like <a href="/shiren2/html/dungeon/road-to-the-end.html">Road to the End</a>,<br>possibly resulting in a monster defeating it and leveling up.<br>Leveling up a Pit Mamel into a Cave Mamel early on is highly recommended.</p>
           <p>Of course, higher level enemies are much stronger, so you have to be careful with how you defeat them.<br>There are many ways to defeat high level enemies, but here are some ideas:</p>
           <ul>
             <li>Deal lots of damage in a single hit by throwing Gitan or using Flame Grass, Dragon Grass, etc.</li>
@@ -286,14 +286,99 @@
           </table>
           <h2 id="synthesize_otogiriso">Synthesize Otogiriso for an Easier Time</h2>
           <img src="/shiren2/image/other/synthesize_otogiriso.png" width="863" height="160" alt="synthesize_otogiriso.png" class="image_padding">
-          <p>Synthesizing Otogiriso onto a shield or weapon lets Shiren restore HP when he receives or deals damage.<br>One 弟 seal restores 4 HP, and the amount of HP restored can be increased by <a href="/shiren2/html/system/synthesis-seals.html#stacked_effects">stacking seals</a>.</p>
+          <p>Synthesizing <a href="/shiren2/html/item/grass.html#otogiriso">Otogiriso</a> onto a shield or weapon lets Shiren restore HP when he receives or deals damage.<br>One 弟 seal restores 4 HP, and the amount of HP restored can be increased by <a href="/shiren2/html/system/synthesis-seals.html#stacked_effects">stacking seals</a>.</p>
           <p>For example, if you have 5 弟 seals on a shield, 15 HP will be restored every time you get hit by an attack.<br>So, stacking 5 弟 seals pretty much nullifies any attack that deals 15 or less damage!<br>The HP restoration also takes effect when you're hit by ranged attacks like Dragon fire.<br>Furthermore, whereas the HP restoration only takes effect once per turn with weapons (1 attack per turn),<br>there's no limit for shields - you'll restore HP after each and every hit you take on that turn.</p>
-          <p>So as you can see, 弟 on a shield is easily one of the best seals in the game to help with consistency.<br>Prioritize synthesizing it onto your shield once you reach Shuten Trail Hard.</p>
-          <p>Lastly, if you obtain a Phantasm Bracelet in one of the post-game dungeons, it can be a good idea<br>to synthesize 弟 seals onto your weapon so that you can stay inside walls longer too.</p>
+          <p>As you can see, 弟 on a shield is easily one of the best seals in the game to help with consistency.<br>Prioritize synthesizing it onto your shield once you reach Shuten Trail Hard.</p>
+          <p>Lastly, if you obtain a <a href="/shiren2/html/item/bracelets.html#phantasm_bracelet">Phantasm Bracelet</a> in one of the post-game dungeons, it can be a good idea<br>to synthesize 弟 seals onto your weapon so that you can stay inside walls longer too.</p>
           <h2 id="how_to_handle_curses">How to Handle Curses</h2>
-          <p>Text</p>
+          <p>Equipment found on the ground can sometimes be cursed. (呪 seal).<br>The curse doesn't affect the equipment's strength or abilities, but you won't be able to unequip the item.</p>
+          <p>In Shiren 2, only weapons, shields, and bracelets can be cursed.<br>And to reiterate, the only effect of a curse is that it prevents the item from being unequipped.<br>Other item categories cannot be cursed, and upgrade values and abilities are not affected.</p>
+          <p>So while it might sound mild compared to other games, cursed equipment can still be troublesome.<br>It prevents swapping equipment, synthesizing, and unequipping bracelets to keep them from shattering.</p>
           <h3 id="curse_related_techniques">Curse Related Techniques</h3>
+          <dl>
+            <dt>Remove the curse</dt>
+            <dd>Some ideas include...</dd>
+          </dl>
+          <ul>
+            <li>Read a <a href="/shiren2/html/item/scrolls.html#purify_scroll">Purify Scroll</a> to remove curses from all equipped items.
+              <ul>
+                <li>It only removes curses from <strong>equipped</strong> items, so equip cursed items before reading the scroll.</li>
+              </ul>
+            </li>
+            <li><a href="/shiren2/html/system/gameplay-basics.html#synthesis">Synthesize</a> in a way that avoids the transfer of the 呪 seal to the base item.
+              <ul>
+                <li>Curses are synthesis seals in Shiren 2. (呪 seal).</li>
+                <li>As long as the base item has filled seals, cursed equipment can be synthesized without the curse transferring.</li>
+                <li>However, since cursed equipment comes with -1 upgrade value, the base item will become slightly weaker.</li>
+              </ul>
+            </li>
+            <li>Take control of a <a href="/shiren2/html/system/monsters.html#straw_voodoll_family">Straw Voodoll</a> family monster using a <a href="/shiren2/html/item/staves.html#possession_staff">Possession Staff</a>.<br>　What gets purified depends on the level of the monster:<br>　Straw Voodoll → equipped shields.<br>　Nailed Voodoll → all equipped items.<br>　Spiked Voodoll → all equipment in your inventory, exluding items in pots.
+              <ul>
+                <li>In other words, if your items get cursed by a Straw Voodoll family monster,<br>you can immediately undo the curse by taking control of them using a Possession Staff.</li>
+              </ul>
+            </li>
+            <li>Let Gyandora pluck the cursed equipment. (It can also pluck other equipment in your inventory).
+              <ul>
+                <li>Gyandora can pluck your equipped items, including those that are cursed.</li>
+                <li>The random seal erasing effect could erase the 呪 seal if you're lucky.</li>
+                <li>However, note that the number of seal slots will also decrease by 1.</li>
+                <li>Monsoon Doll won't erase the 呪 seal, so they cannot be used to remove curses.</li>
+              </ul>
+            </li>
+            <li>Have the Blacksmith erase the 呪 seal at Shuten Halfway. (Weapon or shield only).
+              <ul>
+                <li>This only works for cursed items that are not currently equipped.</li>
+              </ul>
+            </li>
+          </ul>
+          <p>Note that Heaven Scroll, Earth Scroll, and Plating Scroll will not remove curses in Shiren 2.</p>
+          <dl>
+            <dt>Unequip the cursed item</dt>
+            <dd>It's possible to unequip cursed items without removing the curse.</dd>
+          </dl>
+          <ul>
+            <li>Intentionally step on a Strip Trap.
+              <ul>
+                <li></li>
+                <li></li>
+              </ul>
+            </li>
+            <li>Let a Kengo family monster disarm you.
+              <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </li>
+            <li>Break or shatter the equipment.
+              <ul>
+                <li>
+                  <ul>
+                    <li></li>
+                  </ul>
+                </li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </li>
+            <li>Let an Iron Zalokleft steal from you.
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+            <li>Return to Napus Village. (All items will be unequipped when you wake up).
+              <ul>
+                <li></li>
+              </ul>
+            </li>
+          </ul>
           <p>Text</p>
+          <dl>
+            <dt>What about Asuka's equipment?</dt>
+            <dd>Text</dd>
+          </dl>
           <h2 id="making_bracelets_last">Making Bracelets Last</h2>
           <p>Text</p>
           <h3 id="when_to_equip_unequip">When to Equip / Unequip</h3>
