working on the basic techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -339,52 +339,75 @@
           <ul>
             <li>Intentionally step on a Strip Trap.
               <ul>
-                <li></li>
-                <li></li>
+                <li>If you discover this trap, you can check all of your equipment for curses.</li>
+                <li>Ensure your surroundings are safe before stepping on it.</li>
               </ul>
             </li>
             <li>Let a Kengo family monster disarm you.
               <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Make sure your back is facing a wall.</li>
+                <li>Kengo = shields, Iai = swords and shields, and Shihan = swords, shields, bracelets.</li>
+                <li>Iai and Shihan have high attack, so you'll want to pour water on them from a Water Pot.</li>
+                <li>You can also disarm Shiren yourself by taking control of a Kengo family monster.</li>
               </ul>
             </li>
             <li>Break or shatter the equipment.
               <ul>
-                <li>
+                <li>Intentionally take damage from enemy attacks to shatter bracelets.
                   <ul>
-                    <li></li>
+                    <li>Weaken a weapon element monster using a Water Pot, or equip a shield with 弟 seals.</li>
                   </ul>
                 </li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Break a Pickaxe by digging walls.</li>
+                <li>Though keep in mind, the equipment will be lost when it breaks.</li>
+                <li>Shields cannot be broken.</li>
               </ul>
             </li>
             <li>Let an Iron Zalokleft steal from you.
               <ul>
-                <li></li>
+                <li>Iron Zalokleft is rather rare, so this might not be practical.</li>
               </ul>
             </li>
-            <li>Return to Napus Village. (All items will be unequipped when you wake up).
+            <li>Return to Napus Village.
               <ul>
-                <li></li>
+                <li>All items will be unequipped when you wake up, including cursed equipment.</li>
               </ul>
             </li>
           </ul>
-          <p>Text</p>
+          <p>As you can see, there are multiple ways to unequip cursed items without removing the curse.</p>
           <dl>
             <dt>What about Asuka's equipment?</dt>
-            <dd>Text</dd>
+            <dd>The only way to remove curses from Asuka's equipment is for Shiren to read a Purify Scroll while standing next to her.<br>You could try to utilize a Strip Trap or Kengo family monster to unequip her, but it can be a little inconsistent.<br>If all else fails, you could intentionally have her collapse so that she drops her equipment.</dd>
           </dl>
           <h2 id="making_bracelets_last">Making Bracelets Last</h2>
-          <p>Text</p>
+          <p>Bracelets can shatter in Shiren 2, and there is no way to make them unbreakable.</p>
+          <p>All bracelets eventually crack and shatter in time from enemy attacks,<br>but this section aims to think about ways to prevent the inevitable for as long as possible.<br>See the <a href="/shiren2/html/system/gameplay-basics.html#bracelet_durability">Gameplay Basics</a> page for details on durability values / crack and shatter conditions.</p>
           <h3 id="when_to_equip_unequip">When to Equip / Unequip</h3>
-          <p>Text</p>
+          <dl>
+            <dt>Unequip when fighting enemies</dt>
+            <dd>This is one of the key rules. You might get away with not unequipping bracelets a few times,<br>but keeping them equipped during fights will guarantee that they crack sooner than later.<br>Other actions can cause bracelets to crack, but monster regular attacks are the most common cause.<br><br>For valuable bracelets like Scout Bracelet, you should unequip them even at the risk of receiving damage.<br>It's also good to get in the habit of keeping Pierce Bracelet unequipped while not in use,<br>so that you don't accidentally lose equipment when throwing items at Mixer or Synthesis Pots at walls.<br><br>That said, there are exceptions to this rule.<br>Bracelets that help evade attacks and effects (ex: Salty, Parry, Paper Thin) or boost offensive power (ex: Strength)<br>should be treated as consumable items and worn when needed during combat.<br><br>※ How to unequip 2 bracelets at the same time<br>If you have 2 valuable bracelets equipped and are about to receive an attack on the next turn,<br>you can insert both bracelets into a Storage Pot to unequip both at the same time.<br>This only works if you have a Storage Pot with 2 or more free slots, but can be good to remember.</dd>
+            <dt>Unequip when walking through rooms</dt>
+            <dd>This is to prevent bracelets from receiving damage due to traps like Trip Stone, Landmine, Rockfall, etc.<br>Explosions from landmines, bombs, and cannonballs have a greater chance to crack bracelets.<br>They shouldn't break from these damage sources, but a crack signals the countdown to shattering,<br>so if you're the type to skip checking for traps, keep this in mind.</dd>
+            <dt>Unequip when advancing to the next floor</dt>
+            <dd>There's no way to tell what's waiting for you at the beginning of the next floor,<br>so it's best to unequip bracelets beforehand in case you start in the middle of a Monster House, etc.<br>This is especially the case in deeper floors where Typhoon can shatter bracelets in the blink of an eye.</dd>
+          </dl>
           <h3 id="dangerous_monsters">Dangerous Monsters</h3>
-          <p>Text</p>
+          <dl>
+            <dt>Ironhead Family</dt>
+            <dd>Its head is a ranged attack, but unlike arrows, it's treated as a physical attack so bracelets will take damage.</dd>
+            <dt>Taurus Family</dt>
+            <dd>Brutal hits seem to have a higher chance to crack bracelets.<br>They're difficult to one-shot thanks to their high HP, so bracelets are likely to take damage from counter attacks.</dd>
+            <dt>Pop Tank, Cranky Tank</dt>
+            <dd>They fire cannonballs from a distance even if you're not directly lined up with them,<br>often causing bracelets to crack before you have a chance to unequip them if you're caught off guard.<br>Cranky Tank is troublesome in particular because it can fire cannonballs and move at double speed.</dd>
+            <dt>Fast Monsters (ex: Gale Family), Nashaaga and Lashaaga</dt>
+            <dd>Getting hit by 2~3 attacks per turn instead of 1 means bracelets can shatter that much faster.</dd>
+            <dt>Wolf Droid Family</dt>
+            <dd>Gorilla Bot and Bear Borg can toss bombs from greater distances.<br>However, unlike Porky family monsters, they only toss bombs if Shiren is within view.</dd>
+            <dt>N'dubba</dt>
+            <dd>They get a surprise attack in when they reveal themselves, making it easy for bracelets to take damage.<br>N'dubba 60yr ~ 77yr moves at double speed, so it's best to unequip bracelets before picking up items.<br>If that's too much work, at the very least unequip bracelets when you check merchandise inside shops.</dd>
+            <dt>Nailed Voodoll, Spiked Voodoll</dt>
+            <dd>If your equipped bracelets get cursed, you won't be able to unequip them when fighting monsters.<br>Curses are not treated as seals for bracelets, (bracelets don't have seals to begin with),<br>so unlike weapons and shields, there's no way to protect bracelets through synthesis.<br><br>It's possible to unequip bracelets before Nailed Voodoll has a chance to curse equipped bracelets,<br>but Spiked Voodoll will curse all equipment in your inventory, even if they're not equipped.<br>If you're up against a Spiked Voodoll, you can place the bracelet on the ground or in a Storage Pot.<br>You can also protect bracelets from curses by synthesizing the 祓 seal (Holy Shield, Purify Scroll) onto your shield.</dd>
+          </dl>
           <h3 id="if_you_still_have_trouble">If you still have trouble...</h3>
           <p>Text</p>
           <h2 id="reclaim_items_that_fell_in_water">Reclaim Items that fell in Water</h2>
