working on the basic techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -381,7 +381,7 @@
           </dl>
           <h2 id="making_bracelets_last">Making Bracelets Last</h2>
           <p>Bracelets can shatter in Shiren 2, and there is no way to make them unbreakable.</p>
-          <p>All bracelets eventually crack and shatter in time from enemy attacks,<br>but this section aims to think about ways to prevent the inevitable for as long as possible.<br>See the <a href="/shiren2/html/system/gameplay-basics.html#bracelet_durability">Gameplay Basics</a> page for details on durability values / crack and shatter conditions.</p>
+          <p>All bracelets eventually crack and shatter from enemy attacks,<br>but this section aims to examine ways to prevent the inevitable for as long as possible.<br>See the <a href="/shiren2/html/system/gameplay-basics.html#bracelet_durability">Gameplay Basics</a> page for details on durability values / crack and shatter conditions.</p>
           <h3 id="when_to_equip_unequip">When to Equip / Unequip</h3>
           <dl>
             <dt>Unequip when fighting enemies</dt>
@@ -409,19 +409,116 @@
             <dd>If your equipped bracelets get cursed, you won't be able to unequip them when fighting monsters.<br>Curses are not treated as seals for bracelets, (bracelets don't have seals to begin with),<br>so unlike weapons and shields, there's no way to protect bracelets through synthesis.<br><br>It's possible to unequip bracelets before Nailed Voodoll has a chance to curse equipped bracelets,<br>but Spiked Voodoll will curse all equipment in your inventory, even if they're not equipped.<br>If you're up against a Spiked Voodoll, you can place the bracelet on the ground or in a Storage Pot.<br>You can also protect bracelets from curses by synthesizing the 祓 seal (Holy Shield, Purify Scroll) onto your shield.</dd>
           </dl>
           <h3 id="if_you_still_have_trouble">If you still have trouble...</h3>
-          <p>Text</p>
+          <p>If you still frequently end up with cracked and shattered bracelets despite your best efforts,<br>consider stocking up on either additional copies of the bracelet, or Plating Scrolls to mend cracked bracelets.</p>
+          <p>For example, if you have a stock of Scout Bracelets or Phantasm Bracelets inside a Storage Pot,<br>you can swap one out when it cracks and repair it at Shuten Halfway / read a Plating Scroll to mend it later.<br>Scout Bracelets can be found in <a href="/shiren2/html/dungeon/shuten-trail-hard.html">Shuten Trail Hard</a>, so stocking up on them shouldn't be too difficult.</p>
+          <p>You could also synthesize the 見 seal (Evasive Shield) or equip a Paper Thin Bracelet to increase evasion,<br>which will help bracelets last longer thanks to enemy attacks missing more often.</p>
           <h2 id="reclaim_items_that_fell_in_water">Reclaim Items that fell in Water</h2>
+          <dl>
+            <dt>Have Himakichi retrieve items</dt>
+            <dd>Text</dd>
+            <dt>Evaporate Scroll</dt>
+            <dd>Text</dd>
+            <dt>Freeze Scroll</dt>
+            <dd>Text</dd>
+            <dt>Wall Collapse Scroll</dt>
+            <dd>Text</dd>
+            <dt>Specific Monster Pots + Possession Staff</dt>
+            <dd>Text</dd>
+            <dt>Sanctaruy Scroll</dt>
+            <dd>Text</dd>
+            <dt>Dosukoi Family Monster</dt>
+            <dd>Text</dd>
+          </dl>
           <p>Text</p>
           <h2 id="collecting_island_items">Collecting Island Items in Dungeons</h2>
           <p>Text</p>
           <h3 id="standard_methods">Standard Methods</h3>
-          <p>Text</p>
+          <dl>
+            <dt>Scrolls</dt>
+            <dd></dd>
+          </dl>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <dl>
+            <dt>Phantasm Bracelet</dt>
+            <dd></dd>
+          </dl>
           <h3 id="other_methods">Other Methods</h3>
-          <p>Text</p>
+          <dl>
+            <dt>If a monster is in the middle</dt>
+            <dd>Text</dd>
+            <dt>Knockback Statue</dt>
+            <dd>Text</dd>
+            <dt>Spring</dt>
+            <dd>Text</dd>
+            <dt>Log Trap</dt>
+            <dd>Text</dd>
+            <dt>Flood Trap</dt>
+            <dd>Text</dd>
+            <dt>Pull Staff</dt>
+            <dd>Text</dd>
+            <dt>Knockback Staff</dt>
+            <dd>Text</dd>
+            <dt>Armordillo Tackle</dt>
+            <dd>Text</dd>
+          </dl>
           <h2 id="how_to_use_the_storage">How to use the Storage</h2>
           <p>Text</p>
-          <h3 id="good_items_to_store">Good Items to Store</h3>
+          <dl>
+            <dt>Take items out of pots</dt>
+            <dd>Text</dd>
+            <dt>Deposit important items</dt>
+            <dd>Text</dd>
+            <dt>Place pots on the floor</dt>
+            <dd>Text</dd>
+            <dt>Synthesize staves together</dt>
+            <dd>Text</dd>
+            <dt>Synthesize items you plan on synthesizing</dt>
+            <dd>Text</dd>
+            <dt>Deposit traps</dt>
+            <dd>Text</dd>
+            <dt>Be careful with Surprise Pots</dt>
+            <dd>Text</dd>
+            <dt>Mixer synthesis inside the storage</dt>
+            <dd>Text</dd>
+          </dl>
           <p>Text</p>
+          <pre class="diagram"></pre>
+          <p>Text</p>
+          <h3 id="good_items_to_store">Good Items to Store</h3>
+          <dl>
+            <dt>Revival Grass</dt>
+            <dd>Text</dd>
+            <dt>Wall Collapse Scroll</dt>
+            <dd>Text</dd>
+            <dt>Escape Scroll</dt>
+            <dd>Text</dd>
+            <dt>Blank Scroll</dt>
+            <dd>Text</dd>
+            <dt>Restock Scroll</dt>
+            <dd>Text</dd>
+            <dt>Sanctuary Scroll</dt>
+            <dd>Text</dd>
+          </dl>
+          <pre class="diagram"></pre>
+          <dl>
+            <dt>Suction Scroll</dt>
+            <dd>Text</dd>
+            <dt>Identify Scroll</dt>
+            <dd>Text</dd>
+            <dt>Purify Scroll</dt>
+            <dd>Text</dd>
+            <dt>Staves</dt>
+            <dd>Text</dd>
+            <dt>Storage Pot</dt>
+            <dd>Text</dd>
+            <dt>Strength Bracelet</dt>
+            <dd>Text</dd>
+          </dl>
           <h2 id="combat_techniques">Combat Techniques</h2>
           <p>Text</p>
           <h3 id="shuten_trail_easy"><a href="/shiren2/html/dungeon/shuten-trail-easy.html">Shuten Trail Easy</a></h3>
@@ -447,6 +544,13 @@
           <p>Text</p>
           <h4 id="checking_for_copycat_mask">Checking for Copycat Mask</h4>
           <p>Text</p>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
       </main>
     </div>
