add images to monster kingdom page

--- a/html/system/monster-kingdom.html
+++ b/html/system/monster-kingdom.html
@@ -23,6 +23,7 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Monster Kingdom</h2>
+          <img src="/shiren2/image/other/monster_kingdom.png" width="320" height="240" alt="monster_kingdom.png" class="image_padding">
           <p>Monster Kingdom is a zoo type area for monsters that unlocks after clearing Onigashima.<br>Monsters captured using Monster Pots can be registered and made to live here.<br>You can take or deposit monsters freely, and monsters registered to Monster Kingdom<br>will return here in the event that they are defeated in a dungeon.</p>
           <ul id="quick_links" class="quick_links">
             <li><a href="#monster_kingdom_zones">Monster Kingdom Zones</a>
@@ -54,6 +55,7 @@
           <p>The sign next to an enclosure provides descriptions for each monster within the enclosure.<br>The same descriptions are displayed if you swing or throw a Knowledge Staff at a monster.<br>Monster attack animations can also be enjoyed by idling after selecting a monster name,<br>though some monsters won't use their special attack animations while inside Monster Kingdom.</p>
           <p>Overall, one could say it's Shiren 2's most popular relaxation spot.<br>It might be fun to visit these zones every now and then, and recall where you met each monster.</p>
           <h4 id="wild_kingdom">Wild Kingdom</h4>
+          <img src="/shiren2/image/other/wild_kingdom.png" width="320" height="240" alt="wild_kingdom.png">
           <table class="table_less_padding">
             <thead>
               <tr>
@@ -109,6 +111,7 @@
             </tbody>
           </table>
           <h4 id="ndubba_house">N'dubba House</h4>
+          <img src="/shiren2/image/other/ndubba_house.png" width="320" height="240" alt="ndubba_house.png">
           <p>Every color of N'dubba must be captured to complete Monster Kingdom.<br>There are a total of 9 colors based on the N'dubba's age.</p>
           <table class="table_less_padding">
             <tr>
@@ -137,6 +140,7 @@
             </tr>
           </table>
           <h4 id="flying_friends">Flying Friends</h4>
+          <img src="/shiren2/image/other/flying_friends.png" width="320" height="240" alt="flying_friends.png">
           <table class="table_less_padding">
             <thead>
               <tr>
@@ -192,6 +196,7 @@
             </tbody>
           </table>
           <h4 id="dragon_mountain">Dragon Mountain</h4>
+          <img src="/shiren2/image/other/dragon_mountain.png" width="320" height="240" alt="dragon_mountain.png">
           <p>Manegineko enters the Dragon family enclosure once Monster Kingdom is complete.<br>Note that Armor Spider and Queen Spider are in the same enclosure.</p>
           <table class="table_less_padding">
             <thead>
@@ -260,6 +265,7 @@
             </tbody>
           </table>
           <h4 id="underground_empire">Underground Empire</h4>
+          <img src="/shiren2/image/other/underground_empire.png" width="320" height="240" alt="underground_empire.png">
           <table class="table_less_padding">
             <thead>
               <tr>
@@ -315,6 +321,7 @@
             </tbody>
           </table>
           <h4 id="ninjas_hidden_village">Ninja's Hidden Village</h4>
+          <img src="/shiren2/image/other/ninjas_hidden_village.png" width="320" height="240" alt="ninjas_hidden_village.png">
           <table class="table_less_padding">
             <thead>
               <tr>
@@ -370,6 +377,7 @@
             </tbody>
           </table>
           <h4 id="underwater_paradise">Underwater Paradise</h4>
+          <img src="/shiren2/image/other/underwater_paradise.png" width="320" height="240" alt="underwater_paradise.png">
           <p>Kappas will occasionally throw the grass found inside their enclosure,<br>but the grass will never be thrown at Shiren.</p>
           <table class="table_less_padding">
             <thead>
@@ -426,6 +434,7 @@
             </tbody>
           </table>
           <h4 id="mamel_land">Mamel Land</h4>
+          <img src="/shiren2/image/other/mamel_land.png" width="320" height="240" alt="mamel_land.png">
           <table class="table_less_padding">
             <thead>
               <tr>
