--- a/html/system/castle.html
+++ b/html/system/castle.html
@@ -23,7 +23,7 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Castle</h2>
-          <img src="/shiren2/image/other/castle.png" width="320" height="240" alt="castle.png" class="gallery_image"><img src="/shiren2/image/other/castle_diagram.png" width="320" height="240" alt="castle_diagram.png" class="gallery_image">
+          <img src="/shiren2/image/other/castle.png" width="320" height="240" alt="castle.png" class="gallery_image">
           <p>As the story progresses, Shiren soon finds himself having to build a castle for the village.<br>Castle <a href="/shiren2/html/item/castle-materials.html">Materials</a> can be found throughout Shuten Mountain, and each category comes in three grades.</p>
           <p>The basic flow is:<br><span style="color:purple;">Obtain materials in dungeons → Make castle parts at the summit → Return to the village and build.</span></p>
           <p>Note that your save file will receive a castle icon when you complete the castle.</p>
@@ -157,6 +157,7 @@
           <p>As you can see, Perfect grade castle materials can be found in Shuten Trail Hard,<br>while Shuten Trail Easy only has Normal grade materials.<br>However, note that <span class="warning_text">Perfect Wood can only be found in Shuten Trail Mid.</span><br>It's easy to forget, so try to remember that when going on adventures.<br>Also note that Perfect grade materials can only be found on floors after Shuten Halfway.</p>
           <p>Lastly, enemy monsters will never drop castle materials when tripped,<br>such as when using an ally Armordillo's special attack.</p>
           <h3 id="castle_parts">Castle Parts</h3>
+          <img src="/shiren2/image/other/castle_diagram.png" width="320" height="240" alt="castle_diagram.png">
           <p>The 5 categories of castle materials can be combined in different combinations to make castle parts.<br>The combinations for each type of castle part are:</p>
           <table>
             <thead>
