move castle diagram image below text

--- a/html/system/castle.html
+++ b/html/system/castle.html
@@ -157,8 +157,8 @@
           <p>As you can see, Perfect grade castle materials can be found in Shuten Trail Hard,<br>while Shuten Trail Easy only has Normal grade materials.<br>However, note that <span class="warning_text">Perfect Wood can only be found in Shuten Trail Mid.</span><br>It's easy to forget, so try to remember that when going on adventures.<br>Also note that Perfect grade materials can only be found on floors after Shuten Halfway.</p>
           <p>Lastly, enemy monsters will never drop castle materials when tripped,<br>such as when using an ally Armordillo's special attack.</p>
           <h3 id="castle_parts">Castle Parts</h3>
-          <img src="/shiren2/image/other/castle_diagram.png" width="320" height="240" alt="castle_diagram.png">
           <p>The 5 categories of castle materials can be combined in different combinations to make castle parts.<br>The combinations for each type of castle part are:</p>
+          <img src="/shiren2/image/other/castle_diagram.png" width="320" height="240">
           <table>
             <thead>
               <tr>
