working on the basic techniques page

--- a/html/playing/basic-techniques.html
+++ b/html/playing/basic-techniques.html
@@ -415,21 +415,21 @@
           <h2 id="reclaim_items_that_fell_in_water">Reclaim Items that fell in Water</h2>
           <dl>
             <dt>Have Himakichi retrieve items</dt>
-            <dd>Text</dd>
+            <dd>Himakichi will throw any underwater items he sees over to Shiren,<br>so as long as the item is visible to Himakichi, you can obtain them just by bringing him along.</dd>
             <dt>Evaporate Scroll</dt>
-            <dd>Text</dd>
+            <dd>The simplest and quickest method - all you have to do is read the Evaporate Scroll.<br>Once the water evaporates, walk over to the item and pick it up.<br>※ Only works in Random Dungeon maps.</dd>
             <dt>Freeze Scroll</dt>
-            <dd>Text</dd>
+            <dd>Similar to Evaporate Scroll, all you have to do is read the Freeze Scroll.<br>Items that were underwater will be moved on top of the ice, so walk over to the item and pick it up.<br>※ Only works in Random Dungeon maps.</dd>
             <dt>Wall Collapse Scroll</dt>
-            <dd>Text</dd>
+            <dd>Like the above two scrolls, all you have to do is read the Wall Collapse Scroll.<br>The entire floor will be turned into one large room with regular ground tiles, so walk over to the item and pick it up.<br>※ Only works in Random Dungeon maps.</dd>
             <dt>Specific Monster Pots + Possession Staff</dt>
-            <dd>Text</dd>
+            <dd>You can collect underwater items if you take control of monsters that can pick up or steal items.<br>This includes monsters like Water Strider, Bored Kappa family, and Zalokleft family.<br>Water Strider drops its item when it returns to its pot, so you can collect items without a Possession Staff.<br>However, it might throw the item at a nearby enemy, so be sure to clear the room beforehand.<br>With Bored Kappa, simply move on top of the item and throw it toward dry ground.<br><br>Zalokleft will drop the item it stole when it returns to its pot,<br>but it's trickier to use than the other two because it warps away when it steals an item.<br>It can take a long time to return to where you were, and Zalokleft is easily defeated by enemy monsters.<br>Note that you can use a Possession Staff on enemy versions of these monsters too,<br>so you don't have to have the Monster Pots with you if these monsters appear in the monster table.</dd>
             <dt>Sanctaruy Scroll</dt>
-            <dd>Text</dd>
+            <dd>This is likely more trouble than it's worth, but it's one of the few uses for a Sanctaruy Scroll.<br>Place it on the ground so that items hop around, and then hope the item eventually lands on dry ground.<br>Once the item is on ground, you can pour water from a Water Pot onto the Sanctaruy Scroll to disable the effect.<br>This method is unreliable if the item is far from land, or if there are many underwater items.</dd>
             <dt>Dosukoi Family Monster</dt>
-            <dd>Text</dd>
+            <dd>This method is almost never used because there has to be both water and Dosukoi monsters on the current floor.<br>The idea is the same as Sanctaruy Scroll, where you hope Dosukoi's special attack shifts the item onto dry ground.<br>Dosukoi will only stamp the ground if Shiren is not in the same room,<br>and Hakkeyoi cannot shift items around with its special attack.<br>Use items like Unlucky Staff or Happy Staff to adjust their levels as needed.</dd>
           </dl>
-          <p>Text</p>
+          <p>※ Shiren cannot pick up underwater items using a Phantasm Bracelet.</p>
           <h2 id="collecting_island_items">Collecting Island Items in Dungeons</h2>
           <p>Text</p>
           <h3 id="standard_methods">Standard Methods</h3>
