--- a/html/system/castle.html
+++ b/html/system/castle.html
@@ -158,7 +158,7 @@
           <p>Lastly, enemy monsters will never drop castle materials when tripped,<br>such as when using an ally Armordillo's special attack.</p>
           <h3 id="castle_parts">Castle Parts</h3>
           <p>The 5 categories of castle materials can be combined in different combinations to make castle parts.<br>The combinations for each type of castle part are:</p>
-          <img src="/shiren2/image/other/castle_diagram.png" width="320" height="240">
+          <img src="/shiren2/image/other/castle_diagram.png" width="320" height="240" alt="castle_diagram.png">
           <table>
             <thead>
               <tr>
